--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
 {% block main %}
+<div class="container ">
+    <div class="d-flex justify-content-center">
+        <img src="{{url_for('static', filename='imagens/padaria.jpg')}}" alt="">
+    </div>
 
+</div>
 {% endblock %}
