--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="{{url_for('cadastrar_produtos')}}">Cadastrar Produtos</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search"  aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-                </form>
+{% block pesquisa%}
+
+                {% endblock %}
+
             </div>
         </div>
     </nav>
