Conclusao de cadastro de produtos

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -1,4 +1,41 @@
 {% extends 'base.html' %}
+
+
+
+
+
+
+
 {% block main %}
-<h1>Cadastrar</h1>
+    <div class="container">
+        <div class="d-flex justify-content-center ">
+            <h1>Cadastro de Produtos</h1>
+            <hr>
+        </div>
+        <form action="{{ url_for('cadastrar_produtos') }}" method="post" class="form-control" enctype="multipart/form-data" >
+            <div class="mb-3">
+                <label for="nome" class="form-label">Nome do Produto</label>
+                <input type="text" class="form-control" id="nome" name="nome" required>
+            </div>
+            <div class="mb-3">
+                <label for="descricao" class="form-label">Descrição do Produto</label>
+                <textarea class="form-control" id="descricao" rows="3" name="descricao"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="ingredientes" class="form-label">Ingredientes</label>
+                <input type="text" class="form-control" id="ingredientes" name="ingredientes" >
+            </div>
+            <div class="mb-3">
+                <label for="origem" class="form-label">Origem</label>
+                <input type="text" class="form-control" id="origem" name="origem" >
+            </div>
+            <div class="mb-3">
+                <label for="imagem" class="form-label">Imagem</label>
+                <input type="file" class="form-control" id="imagem" name="imagem" >
+            </div>
+            <button type="submit" class="btn btn-primary">
+                Cadastrar
+            </button>
+        </form>
+    </div>
 {% endblock %}
